fix: change gap for stage-count

--- a/index.css
+++ b/index.css
@@ -218,7 +218,7 @@
     flex-direction: row;
     justify-content: space-around;
     align-items: center;
-    gap: 5px;
+    gap: 10px;
 }
 
 .stage-count {
